# hypatia

./: .gitignore  AUTHORS  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  LICENSE  README.md  mk  run  rust-toolchain  rustfmt.toml
.cargo/: config
.github/workflows/: actions.yml  ci.yaml
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/x86_64/: io.rs  mod.rs
devices/: Cargo.toml  build.rs
devices/src/: link.ld  main.rs
docs/hdp/: README.adoc
docs/hdp/0000/: README.adoc
docs/hdp/0001/: README.adoc
docs/hdp/0002/: README.adoc
docs/hdp/0003/: README.adoc  addrs.rs  mem.tbl  mem.txt
docs/hdp/0004/: README.adoc
docs/hdp/0005/: README.adoc
docs/hdp/0008/: README.adoc
docs/hdp/0009/: README.adoc
docs/hdp/0010/: README.adoc
docs/hdp/0011/: README.adoc
docs/hdp/0014/: README.adoc
docs/hdp/0015/: README.adoc
global/: Cargo.toml  build.rs
global/src/: link.ld  main.rs  runtime.rs
global/src/x86_64/: mod.rs  xferv.rs
hypatia/: Cargo.toml  README.md
hypatia/src/: lib.rs  runtime.rs
hypatia/src/panic/: mod.rs
hypatia/src/x86_64/: x86_64.S
lib/: BOILERPLATE.ld  BOILERPLATE.rs  BOILERPLATE.toml  x86_64-unknown-none-elf.json
libhypatia/: Cargo.toml
libhypatia/src/: lib.rs  runtime.rs  segment.rs
libhypatia/src/panic/: mod.rs
libhypatia/src/x86_64/: asm.rs  mod.rs
memory/: Cargo.toml  build.rs
memory/src/: link.ld  main.rs
monitor/: Cargo.toml  build.rs
monitor/src/: cons.rs  link.ld  main.rs  runtime.rs
node/: Cargo.toml  build.rs
node/src/: link.ld  main.rs
node/src/x86_64/: gdt.rs  idt.rs  mod.rs  tss.rs  xferv.rs
scheduler/: Cargo.toml  build.rs
scheduler/src/: link.ld  main.rs
supervisor/: Cargo.toml  build.rs
supervisor/src/: link.ld  main.rs
system/: Cargo.toml  build.rs
system/src/: link.ld  main.rs
theon/: Cargo.toml  README.md  build.rs
theon/src/: allocator.rs  main.rs  runtime.rs  theon.rs
theon/src/x86_64/: asm.rs  boot.S  init.rs  link.ld  memory.rs  mod.rs  mp.rs  multiboot1.rs
theon/src/x86_64/pc/: acpi.rs  boot.S  init.rs  mod.rs  multiboot1.rs
theon/src/x86_64/pc/acpi/: madt.rs  mod.rs  rsdp.rs
trace/: Cargo.toml  build.rs
trace/src/: link.ld  main.rs
uart/: Cargo.toml
uart/src/: lib.rs
uart/src/x86_64/: mod.rs  ns16550.rs
vcpu/: Cargo.toml  build.rs
vcpu/src/: link.ld  main.rs
vcpu/src/vmx/: asm.rs  mod.rs  vmcs.rs  vmenter.S
vm/: Cargo.toml  build.rs
vm/src/: link.ld  main.rs  runtime.rs
vm/src/x86_64/: mod.rs
vm/src/x86_64/vmx/: mod.rs
vm/src/x86_64/vmx/vapic/: icr.rs  mod.rs
x86_64/: Cargo.toml
x86_64/src/: cpu.rs  debug.rs  gdt.rs  idt.rs  lapic.rs  lib.rs  segment.rs  trap.rs  tss.rs  vm.rs
xtask/: Cargo.toml
xtask/src/: main.rs
