# Copyright 2021  The Hypatia Authors
# All rights reserved
#
# Use of this source code is governed by an MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT.

[workspace]
members = [
    "devices",
    "global",
    "memory",
    "monitor",
    "scheduler",
    "supervisor",
    "system",
    "theon",
    "trace",
    "uart",
    "vcpu",
    "vm",
    "x86_64",
    "xtask",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
