# Copyright 2021  The Hypatia Authors
# All rights reserved
#
# Use of this source code is governed by an MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT.

[workspace]
members = [
    "devices",
    "global",
    "hypatia",
    "memory",
    "monitor",
    "node",
    "scheduler",
    "supervisor",
    "system",
    "theon",
    "trace",
    "uart",
    "vcpu",
    "vm",
    "x86_64",
    "xtask",
]
resolver = "2"

[profile.dev]
panic = "abort"
opt-level = 1  # enables enough optimization for reasonable stack usage

[profile.release]
panic = "abort"
debug = 1
