# Copyright 2021  The Hypatia Authors
# All rights reserved
#
# Use of this source code is governed by an MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT.

[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch = { package = "x86_64", path = "../x86_64" }
hypatia = { path = "../hypatia" }
uart = { path = "../uart" }
