[package]
name = "theon"
version = "0.1.0"
authors = ["Dan Cross <cross@oxide.computer>"]
edition = "2018"

[dependencies]
bitflags = "*"
seq-macro = "*"
static_assertions = "*"
zerocopy = "*"
goblin = { version = "*", default-features = false, features = ["elf64"] }
arch = { path = "../arch" }
uart = { path = "../uart" }
