# Copyright 2021  The Hypatia Authors
# All rights reserved
#
# Use of this source code is governed by an MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT.

[package]
name = "theon"
version = "0.1.0"
authors = ["Dan Cross <cross@oxide.computer>"]
edition = "2018"

[dependencies]
bitflags = "*"
multiboot = "*"
seq-macro = "*"
static_assertions = "*"
zerocopy = "*"
goblin = { version = "*", default-features = false, features = ["endian_fd", "elf64", "elf32", "archive"] }
libhypatia = { path = "../libhypatia" }
uart = { path = "../uart" }
arch = { package = "x86_64", path = "../x86_64" }
